--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "chess-yu-blog",
+  "name": "chessyu.github.io",
   "version": "1.0.0",
   "description": "blog",
   "main": "index.js",
